--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,6 @@ env:
 
 jobs:
   release-adapter:
-    runs-on: macos-latest
+    runs-on: macos-13  # Last macOS version to support Xcode 14
     steps:
       - uses: chartboost/chartboost-mediation-ios-actions/release-adapter@v1
