--- a/.github/workflows/smoke-test.yml
+++ b/.github/workflows/smoke-test.yml
@@ -13,3 +13,5 @@ jobs:
     runs-on: macos-13  # Last macOS version to support Xcode 14
     steps:
       - uses: chartboost/chartboost-mediation-ios-actions/adapter-smoke-test@v1
+        with:
+          allow-warnings: true
